syntax = "proto3";
package tgvalidatord;

import "approvers.proto";
import "currency.proto";
import "metadata.proto";
import "score.proto";

import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option java_package = "com.taurushq.sdk.protect.proto.v1";

message WhitelistedAddressBatchSignature {
  uint64 ID = 1;
  uint64 TenantID = 2;
  uint64 UserID = 3;
  string Signature = 4;
  string Comment = 5;
  string Status = 6;
  google.protobuf.Timestamp CreationDate = 7;
  google.protobuf.Timestamp UpdateDate = 8;

  message WhitelistedAddressSignature {
    uint64 ID = 1;
    uint64 TenantID = 2;
    uint64 BatchSignatureID = 3;
    uint64 WhitelistedAddressID = 4;
    string MetadataHash = 5;
    string Status = 6;
    string Message = 7;
    google.protobuf.Timestamp CreationDate = 8;
    google.protobuf.Timestamp UpdateDate = 9;
  }
  repeated WhitelistedAddressSignature signatures = 9;
}

message Trail {
  uint64 id = 1;
  uint64 userId = 2;
  string externalUserId = 3;
  string action = 4;
  string comment = 5;
  google.protobuf.Timestamp date = 6;
}

message SignedWhitelistedAddressEnvelope {

  uint64 id = 1;
  uint64 tenantId = 2;
  SignedWhitelistedAddress signedAddress = 3;
  Metadata metadata = 4;
  string action = 5;
  repeated Score scores = 6;
  repeated Trail trails = 7;
  string rulesContainer = 8;
  string rule = 9;
  Approvers approvers = 10;
  repeated WhitelistedAddressAttribute attributes = 11;
  string rulesContainerHash = 12;
  // Currency currencyInfo = 13;
  string blockchain = 14;
  string status = 15;
  string network = 16;
  string visibilityGroupID = 17;
  string tnParticipantID = 18;
  string rulesSignatures = 19 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "(super-admin) Signature of rule container used for verification";
    }
  ];
}

message SignedWhitelistedContractAddressEnvelope {

  uint64 id = 1;
  uint64 tenantId = 2;
  SignedWhitelistedContractAddress signedContractAddress = 3;
  Metadata metadata = 4;
  string action = 5;
  repeated Trail trails = 6;
  string rulesContainer = 8;
  string rule = 9;
  Approvers approvers = 10;
  repeated WhitelistedContractAddressAttribute attributes = 11;
  string status = 12;
  string blockchain = 13;
  string network = 14;
  bool  businessRuleEnabled = 15 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "currency business rule status: set to true/false if the related currency is enabled/disabled in the business rules";
    }
  ];
  string rulesSignatures = 16 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "(super-admin) Signature of rule container used for verification";
    }
  ];
}


// Internal messages

message WhitelistUserSignature {
  string userId = 1;
  bytes signature = 2;
  string comment = 3;
}

message WhitelistSignature {
  WhitelistUserSignature signature = 1;
  repeated string hashes = 2;
}

message SignedWhitelistedAddress {
  repeated WhitelistSignature signatures = 1;
  bytes payload = 2;
}

// This proto is used only to serialize an address into an envelope. It's not used in a JSON serialization
message WhitelistedAddress {

  enum AddressType {
    individual = 0;
    exchange = 1;
    baker = 2;
    contract = 3;
    stakepool = 4;
    validator = 5;
    node = 6;
    fiatprovider = 7;
  }

  string blockchain = 1;
  AddressType addressType = 2;
  string address = 3;
  string memo = 4; // stellar memo, ripple tag
  string label = 5; // description of the whitelisted address
  string customerId = 6; // customer ID for external reconciliation
  uint64 exchangeAccountId = 7;
  repeated InternalAddress linkedInternalAddresses = 8;
  string contractType = 9; // CMTA20, ERC20 ...
  repeated WhitelistedAddressAttribute attributes = 10;
  repeated InternalWallet linkedWallets = 11;
  // Currency currencyInfo = 12;
  string network = 13;
  string tnParticipantID = 14;
}

message WhitelistedAddressAttribute {
  uint64 id = 1;
  string key = 2;
  string value = 3;
  string contentType = 4;
  string owner = 5;
  string type = 6;
  string subtype = 7;
  bool isfile = 8;
}

message WhitelistedContractAddressAttribute {
  uint64 id = 1;
  string key = 2;
  string value = 3;
  string contentType = 4;
  string owner = 5;
  string type = 6;
  string subtype = 7;
  bool isfile = 8;
}

message InternalAddress {
  uint64 id = 1;
  string address = 2;
  string label = 3;
}

message InternalWallet {
  uint64 id = 1;
  string name = 2;
  string path = 3;
}

message SignedWhitelistedContractAddress {
  repeated WhitelistSignature signatures = 1;
  bytes payload = 2;
}

enum WhitelistedContractAddressKind {
  // Default has an empty string as a representation
  _default_ = 0;
  NFT_AUTO = 1; // Generic representation for NFTs. Upon receiving this, the backend will try to find the best match, and fill it with one of the types below.
  NFT_XTZ_FA2 = 2;
  NFT_ETH_ERC721 = 3 [deprecated = true]; // Use NFT_EVM_ERC721 or NFT_AUTO instead.
  NFT_ETH_ERC1155 = 4 [deprecated = true]; // Use NFT_EVM_ERC1155 or NFT_AUTO instead.
  NFT_EVM_ERC721 = 5;
  NFT_EVM_ERC1155 = 6;
  SOL_TOKEN = 7;
  SOL_TOKEN2022 = 8;
  NFT_EVM_CRYPTOPUNKS = 9;
  HEDERA_NATIVE_TOKEN = 10;
  HEDERA_NATIVE_NFT = 11;
}

message WhitelistedContractAddress {
  string blockchain = 1;
  string name = 2;
  string symbol = 3;
  uint64 decimals = 4;
  string contractAddress = 5;
  string tokenId = 6; // XTZ FA2, ERC721, ERC1155
  string kind = 7;
  string network = 8;
}
